--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/donald-trump-kim-jong-un-north-korea0.jpg" alt="Donald Trump and Kim Jong Un">
+                      <img src="img//donald-trump-kim-jong-un-north-korea0.jpg" alt="Donald Trump and Kim Jong Un">
                     </picture>
                     <div class="tags">
                       <a href="#">NEWS</a>
@@ -97,7 +97,7 @@
                     <div class="img-tags-wrapper">
                       <a href="#"></a>
                       <picture>
-                        <img src="/img/jamal-khashoggi0.jpg" alt="someone holding Jamal Khashoggi's picture">
+                        <img src="img//jamal-khashoggi0.jpg" alt="someone holding Jamal Khashoggi's picture">
                       </picture>
                     </div>
                     <h3>
@@ -258,7 +258,7 @@
                         <div class="img-tags-wrapper">
                           <a href="#"></a>
                           <picture>
-                            <img src="/img/travel-book-banner0.jpg" alt="Travel book banner">
+                            <img src="img//travel-book-banner0.jpg" alt="Travel book banner">
                           </picture>
                         </div>
                         <h3>
@@ -276,7 +276,7 @@
                         <div class="img-tags-wrapper">
                           <a href="#"></a>
                           <picture>
-                            <img src="/img/travel-influencer-petra0.jpg" alt="petra">
+                            <img src="img//travel-influencer-petra0.jpg" alt="petra">
                           </picture>
                         </div>
                         <h3>
@@ -295,7 +295,7 @@
                         <div class="img-tags-wrapper">
                           <a href="#"></a>
                           <picture>
-                            <img src="/img/red-planet-jordan0.jpg" alt="Wadi Rum, Jordan">
+                            <img src="img//red-planet-jordan0.jpg" alt="Wadi Rum, Jordan">
                           </picture>
                         </div>
                         <h3>
@@ -314,7 +314,7 @@
                         <div class="img-tags-wrapper">
                           <a href="#"></a>
                           <picture>
-                            <img src="/img/krampus-parade-salzburg-austria0.jpg"
+                            <img src="img//krampus-parade-salzburg-austria0.jpg"
                               alt="a guy wearing frankenstein+satan mask">
                           </picture>
                         </div>
@@ -346,7 +346,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/per-durham-01-banner.jpg" alt="PER Durham">
+                      <img src="img//per-durham-01-banner.jpg" alt="PER Durham">
                     </picture>
                     <div class="tags">
                       <a href="#">U.S.</a>
@@ -367,7 +367,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/per-math-01-177498105-banner.jpg" alt="medicinal sample bottles">
+                      <img src="img//per-math-01-177498105-banner.jpg" alt="medicinal sample bottles">
                     </picture>
                     <div class="tags">
                       <a href="#">TECH & SCIENCE</a>
@@ -384,7 +384,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/india-protests.jpg" alt="india protests">
+                      <img src="img//india-protests.jpg" alt="india protests">
                     </picture>
                     <div class="tags">
                       <a href="#">WORLD</a>
@@ -403,7 +403,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/americas-best-stem-high-schools-2020.jpg"
+                      <img src="img//americas-best-stem-high-schools-2020.jpg"
                         alt="america's best stem high schools 2020">
                     </picture>
                     <div class="tags">
@@ -426,7 +426,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/l2-resized.jpg" alt="a wristwatch">
+                      <img src="img//l2-resized.jpg" alt="a wristwatch">
                     </picture>
                     <div class="tags blue">
                       <a href="#">SPONSORED INSIGHT</a>
@@ -447,7 +447,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/sci-arc.jpg" alt="">
+                      <img src="img//sci-arc.jpg" alt="">
                     </picture>
                     <div class="tags blue">
                       <a href="#">SPONSORED INSIGHT</a>
@@ -466,7 +466,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/university-glasgow-adam-smith-business-school.jpg" alt="">
+                      <img src="img//university-glasgow-adam-smith-business-school.jpg" alt="">
                     </picture>
                     <div class="tags blue">
                       <a href="#">SPONSORED INSIGHT</a>
@@ -485,7 +485,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/meet-jerry-oconnell-new-york-city.png" alt="">
+                      <img src="img//meet-jerry-oconnell-new-york-city.png" alt="">
                     </picture>
                     <div class="tags blue">
                       <a href="#">SWEEPSTAKES</a>
@@ -503,7 +503,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/schochor-federico-staton-p-v3.jpg" alt="">
+                      <img src="img//schochor-federico-staton-p-v3.jpg" alt="">
                     </picture>
                     <div class="tags blue">
                       <a href="#">SPONSORED INSIGHT</a>
@@ -590,7 +590,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/arthur-jones-illinois-republican-holocaust.png" alt="Arthur Jones">
+                      <img src="img//arthur-jones-illinois-republican-holocaust.png" alt="Arthur Jones">
                     </picture>
                   </div>
                   <h3>
@@ -603,7 +603,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/christmas-eve-hours-2019.jpg" alt="">
+                      <img src="img//christmas-eve-hours-2019.jpg" alt="">
                     </picture>
                   </div>
                   <h3>
@@ -616,7 +616,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/after-bill-cosby-joke-snl-eddie-murphy-fans-comics-defend-him.jpg"
+                      <img src="img//after-bill-cosby-joke-snl-eddie-murphy-fans-comics-defend-him.jpg"
                         alt="Eddie Murphy">
                     </picture>
                   </div>
@@ -630,7 +630,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/defibrillator.jpg" alt="defibrillator">
+                      <img src="img//defibrillator.jpg" alt="defibrillator">
                     </picture>
                   </div>
                   <h3>
@@ -643,7 +643,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/luka-magnotta-mugshot.jpg" alt="">
+                      <img src="img//luka-magnotta-mugshot.jpg" alt="">
                     </picture>
                   </div>
                   <h3>
@@ -656,7 +656,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/pete-buttigieg-obama-admin-endorsements.jpg" alt="">
+                      <img src="img//pete-buttigieg-obama-admin-endorsements.jpg" alt="">
                     </picture>
                   </div>
                   <h3>
@@ -669,7 +669,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/al-sharpton.jpg" alt="">
+                      <img src="img//al-sharpton.jpg" alt="">
                     </picture>
                   </div>
                   <h3>
@@ -684,7 +684,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/2019-1119-colombia-td-sponsored.jpg" alt="">
+                      <img src="img//2019-1119-colombia-td-sponsored.jpg" alt="">
                     </picture>
                     <div class="tags blue">
                       <a href="#">SPONSORED INSIGHT</a>
@@ -703,7 +703,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/national-museum-qatar.png" alt="">
+                      <img src="img//national-museum-qatar.png" alt="">
                     </picture>
                     <div class="tags blue">
                       <a href="#">SPONSORED INSIGHT</a>
@@ -722,7 +722,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/nw-star-wars-banner-sponsored.jpg" alt="">
+                      <img src="img//nw-star-wars-banner-sponsored.jpg" alt="">
                     </picture>
                     <div class="tags blue">
                       <a href="#">SPONSORED INSIGHT</a>
@@ -741,7 +741,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/jerudong-international-school.jpg" alt="">
+                      <img src="img//jerudong-international-school.jpg" alt="">
                     </picture>
                     <div class="tags blue">
                       <a href="#">SPONSORED INSIGHT</a>
@@ -760,7 +760,7 @@
                   <div class="img-tags-wrapper">
                     <a href="#"></a>
                     <picture>
-                      <img src="/img/americas-most-responsible-companies-2020.jpg" alt="">
+                      <img src="img//americas-most-responsible-companies-2020.jpg" alt="">
                     </picture>
                   </div>
                   <h3>
