finish newsweek conversations section

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         </div>
 
         <div class="left col col-lg order-md-1 j-noBlankSpaceScroll">
-          <div class="content">
+          <div class="content js-sticky">
             <div id="featured" class="nw-block">
               <h2 class="block-title">FEATURED STORIES</h2>
               <div class="article-wrapper">
@@ -769,6 +769,66 @@
                   <p>Newsweek partnered with Statista Inc. to spotlight 300 companies that stand up as good citizens and
                     good neighbors.</p>
                 </article>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="nw-conversations">
+        <div class="section-title">
+          <h2>NEWSWEEK CONVERSATIONS</h2>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-8 container">
+                <div class="conversation-block conversation-main row">
+                  <div class="conversation-block__texts col-5">
+                    <h3><a href="#">The Vampire Diaries' Paul Wesley Talks Fame, Directing and CBS' 'Tell Me a Story'</a></h3>
+                    <p>"I try my best not to drink the Kool-Aid too much, because that can be a slippery slope," Paul Wesley said about dealing
+                    with fame.</p>
+                    <time>20:00</time>
+                  </div>
+                  <figure class="col-7">
+                    <a href="#"></a>
+                    <img src="img/newsweek-conversations-paul-wesley.jpg" alt="">
+                    <span class="conversation-block__play"></span>
+                  </figure>
+                </div>
+              </div>
+              <div class="conversations-other col-md-4">
+                <div class="conversation-block row">
+                  <figure class="col-4">
+                    <a href="#"></a>
+                    <img src="img/newsweek-conversations-leslie-grossman0.jpg" alt="">
+                    <span class="conversation-block__play"></span>
+                  </figure>
+                  <div class="conversation-block__texts col-8">
+                    <h3><a href="#">'American Horror Story's' Leslie Grossman Is the Definition of a Great Hollywood Character Actress</a>
+                    </h3>
+                    <time>21:04</time>
+                  </div>
+                </div>
+                <div class="conversation-block row">
+                  <figure class="col-4">
+                    <a href="#"></a>
+                    <img src="img/newsweek-conversations-willem-dafoe0.jpg" alt="">
+                    <span class="conversation-block__play"></span>
+                  </figure>
+                  <div class="conversation-block__texts col-8">
+                    <h3><a href="#">Newsweek Conversations with Actor Willem Dafoe</a></h3>
+                    <time>20:49</time>
+                  </div>
+                </div>
+                <div class="conversation-block row">
+                  <figure class="col-4">
+                    <a href="#"></a>
+                    <img src="img/newsweek-conversations-matthew-modine0.jpg" alt="">
+                    <span class="conversation-block__play"></span>
+                  </figure>
+                  <div class="conversation-block__texts col-8">
+                    <h3><a href="#">‘Stranger Things’ Star Matthew Modine On New Movie ‘Miss Virginia’</a></h3>
+                    <time>17:39</time>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
